--- a/views/styles/frontoffice/_produit.scss
+++ b/views/styles/frontoffice/_produit.scss
@@ -43,7 +43,7 @@
   .rectangleProduit {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin: 3em 2em;
     padding: 0 1em;
